--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 	</head>
 	<body>
 		<h1>Pokemon List</h1>
-    <!-- Header section containing navigation links -->
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Pokemon</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </nav>
-    </header>
+		<!-- Header section containing navigation links -->
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Pokemon</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Input field where user can enter a new pokemon's name and submit it -->
 		<form class="add-pokemon-form">
@@ -40,6 +40,8 @@
 		</footer>
 
 		<!-- Link to the JavaScript file -->
+		<script src="JS/promise-polyfill.js"></script>
+		<script src="JS/fetch-polyfill.js"></script>
 		<script src="JS/scripts.js"></script>
 	</body>
 </html>
